fix: dark mode optimizations

--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ body {
   display: block;
   border: 1px solid var(--primary-color);
   border-radius: 0.5rem;
-  max-width: 190px;
+  max-width: 140px;
   margin: 1rem 1rem 1rem 0rem;
 }
 
